adding font, refining concept

--- a/FontParts.ufo/fontinfo.plist
+++ b/FontParts.ufo/fontinfo.plist
@@ -1,188 +1,78 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>ascender</key>
-	<real>680.0</real>
-	<key>capHeight</key>
-	<real>680.0</real>
-	<key>descender</key>
-	<real>-150.0</real>
-	<key>familyName</key>
-	<string>RoboType</string>
-	<key>guidelines</key>
-	<array>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>3o4YMTXkCK</string>
-			<key>name</key>
-			<string>top</string>
-			<key>x</key>
-			<integer>117</integer>
-			<key>y</key>
-			<integer>461</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>lXbDEGpPO3</string>
-			<key>name</key>
-			<string>acento_upper</string>
-			<key>x</key>
-			<integer>174</integer>
-			<key>y</key>
-			<integer>669</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>ffSvYq8tF2</string>
-			<key>name</key>
-			<string>center_upper</string>
-			<key>x</key>
-			<integer>-86</integer>
-			<key>y</key>
-			<integer>584</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>vqjOjpDepc</string>
-			<key>name</key>
-			<string>top_lower</string>
-			<key>x</key>
-			<integer>386</integer>
-			<key>y</key>
-			<integer>158</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>TP3kbcDUBT</string>
-			<key>name</key>
-			<string>center_lower</string>
-			<key>x</key>
-			<integer>-84</integer>
-			<key>y</key>
-			<integer>602</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>eP1P4l2Ars</string>
-			<key>x</key>
-			<integer>307</integer>
-			<key>y</key>
-			<integer>240</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>r659LLDZoO</string>
-			<key>x</key>
-			<integer>360</integer>
-			<key>y</key>
-			<integer>-71</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>MJfeYVV5zj</string>
-			<key>name</key>
-			<string>CENTER</string>
-			<key>x</key>
-			<integer>346</integer>
-			<key>y</key>
-			<integer>804</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>SGpbTyqdcE</string>
-			<key>name</key>
-			<string>BOTTOM</string>
-			<key>x</key>
-			<integer>476</integer>
-			<key>y</key>
-			<integer>-118</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>8BzVcAW55D</string>
-			<key>name</key>
-			<string>BCENTER</string>
-			<key>x</key>
-			<integer>336</integer>
-			<key>y</key>
-			<integer>636</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>6IYTFMBI0X</string>
-			<key>name</key>
-			<string>centertop</string>
-			<key>x</key>
-			<integer>572</integer>
-			<key>y</key>
-			<integer>872</integer>
-		</dict>
-		<dict>
-			<key>angle</key>
-			<integer>0</integer>
-			<key>identifier</key>
-			<string>8BDaLJpk5s</string>
-			<key>name</key>
-			<string>TOPTOP</string>
-			<key>x</key>
-			<integer>522</integer>
-			<key>y</key>
-			<integer>1014</integer>
-		</dict>
-	</array>
-	<key>openTypeNameDesigner</key>
-	<string>Frederik Berlaen</string>
-	<key>openTypeOS2WeightClass</key>
-	<integer>400</integer>
-	<key>openTypeOS2WidthClass</key>
-	<integer>5</integer>
-	<key>postscriptBlueValues</key>
-	<array>
-		<integer>-10</integer>
-		<integer>0</integer>
-		<integer>500</integer>
-		<integer>510</integer>
-		<integer>680</integer>
-		<integer>690</integer>
-	</array>
-	<key>postscriptFamilyBlues</key>
-	<array/>
-	<key>postscriptFamilyOtherBlues</key>
-	<array/>
-	<key>postscriptOtherBlues</key>
-	<array/>
-	<key>postscriptStemSnapH</key>
-	<array/>
-	<key>postscriptStemSnapV</key>
-	<array/>
-	<key>styleName</key>
-	<string>Roman</string>
-	<key>unitsPerEm</key>
-	<integer>1000</integer>
-	<key>xHeight</key>
-	<integer>500</integer>
-</dict>
+  <dict>
+    <key>ascender</key>
+    <real>680.0</real>
+    <key>capHeight</key>
+    <integer>615</integer>
+    <key>descender</key>
+    <integer>-150</integer>
+    <key>familyName</key>
+    <string>FontParts</string>
+    <key>guidelines</key>
+    <array>
+      <dict>
+        <key>angle</key>
+        <integer>0</integer>
+        <key>identifier</key>
+        <string>aKp5t7OSFb</string>
+        <key>x</key>
+        <integer>350</integer>
+        <key>y</key>
+        <integer>535</integer>
+      </dict>
+      <dict>
+        <key>angle</key>
+        <integer>0</integer>
+        <key>identifier</key>
+        <string>jbqBMcb7J8</string>
+        <key>x</key>
+        <integer>328</integer>
+        <key>y</key>
+        <integer>-65</integer>
+      </dict>
+      <dict>
+        <key>angle</key>
+        <integer>0</integer>
+        <key>identifier</key>
+        <string>HOpqy5ykDw</string>
+        <key>x</key>
+        <integer>288</integer>
+        <key>y</key>
+        <integer>665</integer>
+      </dict>
+    </array>
+    <key>openTypeNameDesigner</key>
+    <string>Frederik Berlaen</string>
+    <key>openTypeOS2WeightClass</key>
+    <integer>400</integer>
+    <key>openTypeOS2WidthClass</key>
+    <integer>5</integer>
+    <key>postscriptBlueValues</key>
+    <array>
+      <integer>-10</integer>
+      <integer>0</integer>
+      <integer>500</integer>
+      <integer>510</integer>
+      <integer>680</integer>
+      <integer>690</integer>
+    </array>
+    <key>postscriptFamilyBlues</key>
+    <array/>
+    <key>postscriptFamilyOtherBlues</key>
+    <array/>
+    <key>postscriptOtherBlues</key>
+    <array/>
+    <key>postscriptStemSnapH</key>
+    <array/>
+    <key>postscriptStemSnapV</key>
+    <array/>
+    <key>styleName</key>
+    <string>Sans</string>
+    <key>unitsPerEm</key>
+    <integer>1000</integer>
+    <key>xHeight</key>
+    <integer>475</integer>
+  </dict>
 </plist>
