--- a/FontParts.ufo/lib.plist
+++ b/FontParts.ufo/lib.plist
@@ -1,380 +1,410 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<?xml version='1.0' encoding='UTF-8'?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>com.defcon.sortDescriptor</key>
-	<array>
-		<dict>
-			<key>ascending</key>
-			<array>
-				<string>F</string>
-				<string>o</string>
-				<string>n</string>
-				<string>P</string>
-				<string>a</string>
-				<string>r</string>
-				<string>t</string>
-				<string>s</string>
-			</array>
-			<key>type</key>
-			<string>glyphList</string>
-		</dict>
-	</array>
-	<key>com.typemytype.glyphBuilder.lastSavedFileName</key>
-	<string>201708222</string>
-	<key>com.typemytype.robofont.compileSettings.autohint</key>
-	<true/>
-	<key>com.typemytype.robofont.compileSettings.checkOutlines</key>
-	<false/>
-	<key>com.typemytype.robofont.compileSettings.createDummyDSIG</key>
-	<true/>
-	<key>com.typemytype.robofont.compileSettings.decompose</key>
-	<false/>
-	<key>com.typemytype.robofont.compileSettings.generateFormat</key>
-	<integer>0</integer>
-	<key>com.typemytype.robofont.compileSettings.releaseMode</key>
-	<false/>
-	<key>com.typemytype.robofont.italicSlantOffset</key>
-	<integer>0</integer>
-	<key>com.typemytype.robofont.shouldAddPointsInSplineConversion</key>
-	<integer>1</integer>
-	<key>com.typesupply.metricsMachine4.groupColors</key>
-	<dict>
-		<key>public.kern1.A</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.C</key>
-		<array>
-			<real>1.0</real>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.E</key>
-		<array>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.H</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.L</key>
-		<array>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.O</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.R</key>
-		<array>
-			<real>1.0</real>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.S</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.T</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.U</key>
-		<array>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.V</key>
-		<array>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.XYK</key>
-		<array>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.Z</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.a</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.b</key>
-		<array>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.c</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.f</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.g</key>
-		<array>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.h</key>
-		<array>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.i</key>
-		<array>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.k</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.s</key>
-		<array>
-			<real>1.0</real>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.t</key>
-		<array>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.u</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.v</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern1.z</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.A</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.B</key>
-		<array>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.C</key>
-		<array>
-			<real>1.0</real>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.J</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.S</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.T</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.U</key>
-		<array>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.V</key>
-		<array>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.X</key>
-		<array>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.Z</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.a</key>
-		<array>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.b</key>
-		<array>
-			<real>1.0</real>
-			<real>0.5</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.c</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.f</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.g</key>
-		<array>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.punctuation</key>
-		<array>
-			<real>1.0</real>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.s</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.t</key>
-		<array>
-			<real>0.0</real>
-			<real>0.5</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.u</key>
-		<array>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-		<key>public.kern2.v</key>
-		<array>
-			<real>0.0</real>
-			<real>0.0</real>
-			<real>1.0</real>
-			<real>0.25</real>
-		</array>
-	</dict>
-	<key>pm.ghostlines.ghostlines.fontFamilyId</key>
-	<integer>11</integer>
-	<key>public.glyphOrder</key>
-	<array>
-		<string>F</string>
-		<string>o</string>
-		<string>n</string>
-		<string>P</string>
-		<string>a</string>
-		<string>r</string>
-		<string>t</string>
-		<string>s</string>
-	</array>
-</dict>
+  <dict>
+    <key>com.defcon.sortDescriptor</key>
+    <array>
+      <dict>
+        <key>ascending</key>
+        <array>
+          <string>F</string>
+          <string>o</string>
+          <string>n</string>
+          <string>t</string>
+          <string>P</string>
+          <string>a</string>
+          <string>r</string>
+          <string>s</string>
+        </array>
+        <key>type</key>
+        <string>glyphList</string>
+      </dict>
+    </array>
+    <key>com.typemytype.glyphBuilder.lastSavedFileName</key>
+    <string>201708222</string>
+    <key>com.typemytype.robofont.compileSettings.autohint</key>
+    <true/>
+    <key>com.typemytype.robofont.compileSettings.checkOutlines</key>
+    <false/>
+    <key>com.typemytype.robofont.compileSettings.createDummyDSIG</key>
+    <true/>
+    <key>com.typemytype.robofont.compileSettings.decompose</key>
+    <false/>
+    <key>com.typemytype.robofont.compileSettings.generateFormat</key>
+    <integer>0</integer>
+    <key>com.typemytype.robofont.compileSettings.releaseMode</key>
+    <false/>
+    <key>com.typemytype.robofont.guideline.magnetic.HOpqy5ykDw</key>
+    <real>5.0</real>
+    <key>com.typemytype.robofont.guideline.magnetic.aKp5t7OSFb</key>
+    <real>5.0</real>
+    <key>com.typemytype.robofont.guideline.magnetic.jbqBMcb7J8</key>
+    <real>5.0</real>
+    <key>com.typemytype.robofont.guideline.showMeasurements.HOpqy5ykDw</key>
+    <false/>
+    <key>com.typemytype.robofont.guideline.showMeasurements.aKp5t7OSFb</key>
+    <false/>
+    <key>com.typemytype.robofont.guideline.showMeasurements.jbqBMcb7J8</key>
+    <false/>
+    <key>com.typemytype.robofont.italicSlantOffset</key>
+    <integer>0</integer>
+    <key>com.typemytype.robofont.segmentType</key>
+    <string>curve</string>
+    <key>com.typemytype.robofont.shouldAddPointsInSplineConversion</key>
+    <integer>1</integer>
+    <key>com.typesupply.metricsMachine4.groupColors</key>
+    <dict>
+      <key>public.kern1.A</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.C</key>
+      <array>
+        <real>1.0</real>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.E</key>
+      <array>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.H</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.L</key>
+      <array>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.O</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.R</key>
+      <array>
+        <real>1.0</real>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.S</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.T</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.U</key>
+      <array>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.V</key>
+      <array>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.XYK</key>
+      <array>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.Z</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.a</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.b</key>
+      <array>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.c</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.f</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.g</key>
+      <array>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.h</key>
+      <array>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.i</key>
+      <array>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.k</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.s</key>
+      <array>
+        <real>1.0</real>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.t</key>
+      <array>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.u</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.v</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern1.z</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.A</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.B</key>
+      <array>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.C</key>
+      <array>
+        <real>1.0</real>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.J</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.S</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.T</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.U</key>
+      <array>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.V</key>
+      <array>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.X</key>
+      <array>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.Z</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.a</key>
+      <array>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.b</key>
+      <array>
+        <real>1.0</real>
+        <real>0.5</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.c</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.f</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.g</key>
+      <array>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.punctuation</key>
+      <array>
+        <real>1.0</real>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.s</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.t</key>
+      <array>
+        <real>0.0</real>
+        <real>0.5</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.u</key>
+      <array>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+      <key>public.kern2.v</key>
+      <array>
+        <real>0.0</real>
+        <real>0.0</real>
+        <real>1.0</real>
+        <real>0.25</real>
+      </array>
+    </dict>
+    <key>pm.ghostlines.ghostlines.fontFamilyId</key>
+    <integer>11</integer>
+    <key>public.glyphOrder</key>
+    <array>
+      <string>F</string>
+      <string>o</string>
+      <string>n</string>
+      <string>t</string>
+      <string>P</string>
+      <string>a</string>
+      <string>r</string>
+      <string>s</string>
+      <string>cedilla</string>
+      <string>ogonek</string>
+      <string>acute</string>
+      <string>acute_i</string>
+      <string>breve</string>
+      <string>caron</string>
+      <string>commaaccent</string>
+      <string>circumflex</string>
+      <string>dieresis</string>
+      <string>dotaccent</string>
+      <string>grave</string>
+      <string>dblgrave</string>
+      <string>hungarumlaut</string>
+      <string>macron</string>
+      <string>ring</string>
+      <string>tilde</string>
+    </array>
+  </dict>
 </plist>
